--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
     "name": "lancelot",
     "version": "0.0.1",
-    "description": "Bot created with create-discord-bot CLI",
+    "description": "KnightHacks' Discord Bot",
     "main": "bot.js",
     "author": "lienne",
+    "scripts": {
+        "test": "nodemon bot.js",
+	"start": "node bot.js"
+    },
     "dependencies": {
         "discord.js": "^11.3.2"
+    },
+    "devDependencies": {
+        "nodemon": "^1.19.2"
     }
 }
