Added eslint and .eslint config to have consistent coding style

--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "author": "lienne",
     "scripts": {
         "test": "nodemon bot.js",
-	"start": "node bot.js"
+        "start": "node bot.js"
     },
     "dependencies": {
         "discord.js": "^11.3.2"
     },
     "devDependencies": {
+        "eslint": "^6.3.0",
+        "eslint-config-standard": "^14.1.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-node": "^10.0.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1",
         "nodemon": "^1.19.2"
     }
 }
