--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "start": "node bot.js"
     },
     "dependencies": {
-        "discord.js": "^11.3.2"
+        "axios": "^0.19.0",
+        "discord.js": "^11.3.2",
+        "instagram-save": "^1.3.2",
+        "prefix": "^1.0.0",
+        "selenium-webdriver": "^4.0.0-alpha.5"
     },
     "devDependencies": {
         "eslint": "^6.3.0",
