--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "axios": "^0.19.0",
         "discord.js": "^11.3.2",
         "prefix": "^1.0.0",
-        "selenium-webdriver": "^4.0.0-alpha.5"
+        "selenium-webdriver": "^4.0.0-alpha.5",
+        "cheerio": "^1.0.0-rc.3"
     },
     "devDependencies": {
         "eslint": "^6.3.0",
