--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "discord.js": "^11.3.2",
         "prefix": "^1.0.0",
         "selenium-webdriver": "^4.0.0-alpha.5",
-        "cheerio": "^1.0.0-rc.3"
+        "cheerio": "^1.0.0-rc.3",
+        "request": "2.88.0"
     },
     "devDependencies": {
         "eslint": "^6.3.0",
