--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
-        "discord.js": "^11.3.2",
-        "prefix": "^1.0.0",
-        "selenium-webdriver": "^4.0.0-alpha.5",
         "cheerio": "^1.0.0-rc.3",
-        "request": "2.88.0"
+        "discord.js": "^11.5.1",
+        "prefix": "^1.0.0",
+        "request": "2.88.0",
+        "selenium-webdriver": "^4.0.0-alpha.5"
     },
     "devDependencies": {
         "eslint": "^6.3.0",
