--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "discord.js": "^11.5.1",
         "prefix": "^1.0.0",
         "request": "2.88.0",
-        "selenium-webdriver": "^4.0.0-alpha.5"
+        "selenium-webdriver": "^4.0.0-alpha.5",
+        "node-fetch":"^2.6.0"
     },
     "devDependencies": {
         "eslint": "^6.3.0",
