Created config.js to handle all setup for all config files

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "lienne",
     "scripts": {
         "test": "nodemon bot.js",
-        "deploy": "node config.js",
+        "setup": "node config.js",
         "start": "node bot.js"
     },
     "dependencies": {
