--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "lienne",
     "scripts": {
         "test": "nodemon bot.js",
-        "setup": "node config.js",
+        "postinstall": "node config.js",
         "start": "node bot.js"
     },
     "dependencies": {
@@ -15,7 +15,7 @@
         "discord.js": "^11.5.1",
         "prefix": "^1.0.0",
         "selenium-webdriver": "^4.0.0-alpha.5",
-        "node-fetch":"^2.6.0"
+        "node-fetch": "^2.6.0"
     },
     "devDependencies": {
         "eslint": "^6.3.0",
